istio/shipping-traffic.yaml
#shipping-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping-virtualservice
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - k8s/k8s-gateway
  http:
  - match:
    - uri:
        prefix: /shipping-service
    rewrite:
      uri: /
    route:
    - destination:
        host: shipping-service
        port:
          number: 80




---
#User-virtual-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping-retry
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - k8s-gateway
  http:
  - match:
    - uri:
        prefix: /shipping-service
    retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream    
    route:
    - destination:
        host: shipping-service
        port:
          number: 80
      



---
#user-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping-service
  namespace: k8s
spec:
  host: shipping-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
    


---
#user-destination-rule-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping-retry
  namespace: k8s
spec:
  host: shipping-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
    tls:
      mode: ISTIO_MUTUAL

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: shipping-mtls
  namespace: k8s
spec:
  selector:
    matchLabels:
      app: shipping-service
  mtls:
    mode: STRICT


#Ensures all incoming requests to User service are encrypted and authenticated.




az acr repository show-tags --name <ACR_NAME> --repository <repository_name> --output table
